Took out the css margin that was used to make the country js popup menu not block the name and phone fields due to the checkout process/form being changed. The spacing is now correct.

--- a/sites/all/themes/fitmoo/css/styles.css
+++ b/sites/all/themes/fitmoo/css/styles.css
@@ -1254,8 +1254,3 @@ ul.selectbox.items li .text {
 
   .locality-block .form-type-textfield {
     width: 100% !important; } }
-
-    /*added by colin o 8/12/2014*/
-  #edit-customer-profile-billing-commerce-customer-address{
-      margin-top:95px;
-  }
